objects/TIMBASURVEYS__SurveyTheme__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__BackgroundColor__c</fullName>
        <label>BackgroundColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__CustomCSS__c</fullName>
        <label>CustomCSS</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__FontColor__c</fullName>
        <description>Color to apply to all the survey text</description>
        <label>FontColor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__FontFamily__c</fullName>
        <label>FontFamily</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__FontSize__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Survey general font size</description>
        <label>FontSize</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__ForegroundColor__c</fullName>
        <label>ForegroundColor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Header1_Size__c</fullName>
        <defaultValue>26</defaultValue>
        <label>Header1 Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Header2Size__c</fullName>
        <defaultValue>22</defaultValue>
        <description>Font size for the h2 tags</description>
        <label>Header2 Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RedirectURL__c</fullName>
        <description>The redirect url when the survey is completed</description>
        <label>RedirectURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SuccessMsg__c</fullName>
        <label>Success Message</label>
        <type>TextArea</type>
    </fields>
    <label>SurveyTheme</label>
    <nameField>
        <label>SurveyTheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyThemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>